--- a/app/views/workallocation/pages/wa-show-work-filter-select-all-none.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-select-all-none.html
@@ -29,7 +29,7 @@ My work
           <div class="govuk-grid-column" style="background-color: 	#f3f2f1; margin-left: 15px;">
             <div class="govuk-checkboxes govuk-checkboxes--large">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="selectall" name="organisation" type="checkbox" value="hmrc" checked >
+                <input class="govuk-checkboxes__input" id="selectall" name="organisation" type="checkbox" value="hmrc" >
                 <label class="govuk-label govuk-checkboxes__label" for="selectall">
                   <strong>Select all</strong>
                 </label>
@@ -41,7 +41,7 @@ My work
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="organisation-2" name="organisation" type="checkbox" value="employment-tribunal" checked>
+                <input class="govuk-checkboxes__input" id="organisation-2" name="organisation" type="checkbox" value="employment-tribunal">
                 <label class="govuk-label govuk-checkboxes__label" for="organisation-2">
                   Damages
                 </label>
