Location Filter - Final version after discussion with Marc and Sharon.
Index file also updated

--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -52,12 +52,20 @@ GOV.UK Prototype Kit
         <div class="govuk-!-padding-bottom-9"></div>
         <!-- SECTION BREAK -->
 
-        <h2 class="govuk-heading-l">My work filter</h2>
+        <h2 class="govuk-heading-l">My work filter - Release 2</h2>
         <div class="xui-alert-link__number">2 </div>
         <div class="govuk-!-padding-bottom-6"></div>
           <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wf?usertype=judiciary&">Filter open</a><br>- v3.3</p>
           <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wfe?usertype=judiciary&">Filter open - Error</a><br>- v3.3</p>
           <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wfbt?usertype=judiciary&">Filter open - filter applied</a><br>- v3.3</p>
+        <div class="govuk-!-padding-bottom-9"></div>
+        <!-- SECTION BREAK -->
+
+        <h2 class="govuk-heading-l">My work filter - (Beyond) Release 2</h2>
+        <div class="xui-alert-link__number">2 </div>
+        <div class="govuk-!-padding-bottom-6"></div>
+          <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter?usertype=judiciary&">Filter open</a></p>
+          <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-results?usertype=judiciary&">Filter open - filter applied</a></p>
         <div class="govuk-!-padding-bottom-9"></div>
         <!-- SECTION BREAK -->
 
@@ -319,12 +327,20 @@ GOV.UK Prototype Kit
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
-    <h2 class="govuk-heading-l">My work filter</h2>
+    <h2 class="govuk-heading-l">My work filter - Release 2</h2>
     <div class="xui-alert-link__number">2 </div>
     <div class="govuk-!-padding-bottom-6"></div>
       <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wf?usertype=staff&">Filter open</a><br>- v3.3</p>
       <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wfe?usertype=staff&">Filter open - Error</a><br>- v3.3</p>
       <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wfbt?usertype=staff&">Filter open - filter applied</a><br>- v3.3</p>
+    <div class="govuk-!-padding-bottom-9"></div>
+    <!-- SECTION BREAK -->
+
+    <h2 class="govuk-heading-l">My work filter - (Beyond) Release 2</h2>
+    <div class="xui-alert-link__number">2 </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter?usertype=staff&">Filter open</a></p>
+      <p><a target="_blank" href="/workallocation/pages/wa-show-work-filter-results?usertype=staff&">Filter open - filter applied</a></p>
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
