--- a/app/views/workallocation/pages/Wa-show-work-filter-results.html
+++ b/app/views/workallocation/pages/Wa-show-work-filter-results.html
@@ -7,16 +7,6 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-banner hmcts-banner--success">
-  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
-    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
-  </svg>
-  <div class="hmcts-banner__message">
-    <span class="hmcts-banner__assistive">Success</span>
-    You have added a new location
-  </div>
-</div>
-
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -73,7 +63,7 @@ My work
         <hr>
         <div style="width:70%; padding:0 0 20px 0;display:inline-block;">
           <label class="govuk-body" for="location-picker">
-            Search for a locaton by name
+            Search for a location by name
           </label>
           <select id="location-picker" name="locationPicker">
             <option value=" " {% if data.locationPicker == ' ' %} selected {% endif %}> </option>
@@ -186,11 +176,6 @@ My work
           text: "Apply",
           href: "wa-show-work-filter-results",
           classes: "govuk-!-margin-right-3"
-        }) }}
-        {{ govukButton({
-          text: "Reset to default",
-          classes: "govuk-button--secondary",
-          href: "wa-available-tasks-wf"
         }) }}
       </div>
     </div>
