--- a/app/views/workallocation/pages/wa-show-work-filter-select-all-none.html
+++ b/app/views/workallocation/pages/wa-show-work-filter-select-all-none.html
@@ -64,7 +64,7 @@ My work
         <hr>
         <div style="width:70%; padding:0 0 20px 0;display:inline-block;">
           <label class="govuk-body" for="location-picker">
-            Search for a locaton by name
+            Search for a location by name
           </label>
           <select id="location-picker" name="locationPicker">
             <option value=" " {% if data.locationPicker == ' ' %} selected {% endif %}> </option>
