--- a/app/views/workallocation/pages/Wa-show-work-filter-add-2-apply.html
+++ b/app/views/workallocation/pages/Wa-show-work-filter-add-2-apply.html
@@ -7,7 +7,6 @@
 My work
 {% endblock %}
 {% block content %}
-
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -81,17 +80,33 @@ My work
           <div style="width:25%; display:inline-block; vertical-align:top; margin-top:25px; margin-left:10px;">
             {{ govukButton({
               text: "Add location",
-              href: "wa-show-work-filter-add-1",
+              href: "wa-show-work-filter-add-2",
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
           <ul class="hmcts-filter-tags">
             <li>
-              <a class="hmcts-filter__tag" href="">
+              <a class="hmcts-filter__tag" href="/path/to/remove/this">
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
                 Taylor House Tribunal Hearing Centre
+              </a>
+            </li>
+            <li>
+              <a class="hmcts-filter__tag" href="wa-show-work-filter-delete">
+                <span class="govuk-visually-hidden">
+                  Remove this filter
+                </span>
+                Birmingham Civil and Family Justice Centre
+              </a>
+            </li>
+            <li>
+              <a class="hmcts-filter__tag" href="wa-show-work-filter-add-1">
+                <span class="govuk-visually-hidden">
+                  Remove this filter
+                </span>
+                Hatton Cross Tribunal Hearing Centre
               </a>
             </li>
           </ul>
@@ -286,6 +301,37 @@ My work
               text: now | date( 'add', 8, 'days' ) | date,
               classes: "govuk-tag--grey"
             })}} -->{{ now |  date("subtract", 8, "day") | date( "D MMMM YYYY" ) }} </td>
+              <!--  <td class="govuk-table__cell">N/A</td> -->
+              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
+              <td class="govuk-table__cell"> <!--{{govukTag({
+              text: now | date( 'subtract', 2, 'days' ) | date,
+              classes: "govuk-tag--red"
+            })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
+                  style="fill: black">
+                  <title>This case has more than one task. Review needed.</title>
+                  <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
+                        C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
+                </svg></td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
+              <td class="govuk-table__cell"><!--{{govukTag({
+              text: now | date( 'add', 0, 'days' ) | date,
+              classes: "govuk-tag--yellow"
+            })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</td>
               <!--  <td class="govuk-table__cell">N/A</td> -->
               <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
