Location Filter - Final version after discussion with Marc and Sharon.
Some how the link does not work access on the herokuapp.

Trying another way

--- a/app/views/workallocation/pages/Wa-show-work-filter-add-2.html
+++ b/app/views/workallocation/pages/Wa-show-work-filter-add-2.html
@@ -80,7 +80,7 @@ My work
           <div style="width:25%; display:inline-block; vertical-align:top; margin-top:25px; margin-left:10px;">
             {{ govukButton({
               text: "Add location",
-              href: "wa-show-work-filter-add-2",
+              href: "/workallocation/pages/wa-show-work-filter-add-2",
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
@@ -94,7 +94,7 @@ My work
               </a>
             </li>
             <li>
-              <a class="hmcts-filter__tag" href="wa-show-work-filter-delete">
+              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter-delete.html">
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
@@ -102,7 +102,7 @@ My work
               </a>
             </li>
             <li>
-              <a class="hmcts-filter__tag" href="wa-show-work-filter-add-1">
+              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter-add-1.html">
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
@@ -182,7 +182,7 @@ My work
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         {{ govukButton({
           text: "Apply",
-          href: "wa-show-work-filter-add-2-apply",
+          href: "/workallocation/pages/wa-show-work-filter-add-2-apply.html",
           classes: "govuk-!-margin-right-3"
         }) }}
       </div>
