--- a/app/views/workallocation/pages/wa-show-work-filter.html
+++ b/app/views/workallocation/pages/wa-show-work-filter.html
@@ -167,7 +167,7 @@ My work
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         {{ govukButton({
           text: "Apply",
-          href: "wa-show-work-filter-results",
+          href: "",
           classes: "govuk-!-margin-right-3"
         }) }}
       </div>
