--- a/app/views/workallocation/pages/Wa-show-work-filter-add-1.html
+++ b/app/views/workallocation/pages/Wa-show-work-filter-add-1.html
@@ -80,13 +80,13 @@ My work
           <div style="width:25%; display:inline-block; vertical-align:top; margin-top:25px; margin-left:10px;">
             {{ govukButton({
               text: "Add location",
-              href: "wa-show-work-filter-add-2",
+              href: "/workallocation/pages/wa-show-work-filter-add-2.html",
               classes: "govuk-!-margin-right-3"
             }) }}
           </div>
           <ul class="hmcts-filter-tags">
             <li>
-              <a class="hmcts-filter__tag" href="/path/to/remove/this">
+              <a class="hmcts-filter__tag" href="">
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
@@ -94,7 +94,7 @@ My work
               </a>
             </li>
             <li>
-              <a class="hmcts-filter__tag" href="wa-show-work-filter">
+              <a class="hmcts-filter__tag" href="/workallocation/pages/wa-show-work-filter.html">
                 <span class="govuk-visually-hidden">
                   Remove this filter
                 </span>
@@ -174,7 +174,7 @@ My work
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
         {{ govukButton({
           text: "Apply",
-          href: "wa-show-work-filter-add-1-apply",
+          href: "/workallocation/pages/wa-show-work-filter-add-1-apply.html",
           classes: "govuk-!-margin-right-3"
         }) }}
       </div>
