--- a/app/views/caseaccess/pages/booking.html
+++ b/app/views/caseaccess/pages/booking.html
@@ -9,38 +9,18 @@ Case details
 {% block content %}
 <form action="#" method="post" onsubmit="usePage(this, 'bob');">
   <div class="govuk-form-group">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">
-          Work access
-        </h1>
-      </legend>
-      <div class="govuk-radios">
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/booking-opt2" checked>
-          <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-            View your existing bookings
-          </label>
-        </div>
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location-opt1">
-          <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-            New booking
-          </label>
-        </div>
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-3" name="bob" type="radio" value="/caseaccess/pages/mywork-opt2">
-          <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-            View tasks and cases
-          </label>
-        </div>
-      </div>
-    </fieldset>
+
   </div>
   <div class="govuk-button-group">
     {{ govukButton({
-      text: "Continue",
-      classes: "govuk-!-margin-right-3"
+      text: "Design option one",
+      classes: "govuk-!-margin-right-3",
+      href: "/caseaccess/pages/booking-design-option-1.html"
+    }) }}
+    {{ govukButton({
+      text: "Design option two",
+      classes: "govuk-!-margin-right-3",
+      href: "/caseaccess/pages/booking-design-option-2.html"
     }) }}
   </div>
 </form>
