Had a session with Marc and Sharon and presented four different options for the Booking UI.
One of the option (booking-design-option-2) was selected and I was asked to make few changes listed below:

View your existing bookings > Choose an  existing booking
New booking > Create a new booking
Booking start 16 October 2021 - ends 21 October 2021 > 16 October 2021 to 21 December 2021
Work access > Ask the user for correct title
Work access >
Work access >
Continue > Secondary button
Taylor House Tribunal Centre. > Taylor House Tribunal Hearing Centre
Access starts > Booking Start
Access ends. > Booking Ends

--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -272,9 +272,9 @@ GOV.UK Prototype Kit
 -->
           <!-- SECTION BREAK -->
 
-          <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
+          <!-- <h3 class="govuk-heading-s">Scenario E - Booking UI</h3> -->
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p> -->
-          <p><a target="_blank" href="/caseaccess/pages/booking-staff?usertype=staff&">Booking UI</a><br>Select type of access<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p>
+          <!-- <p><a target="_blank" href="/caseaccess/pages/booking-staff?usertype=staff&">Booking UI</a><br>Select type of access<br> (NEW PAGE - UPDATED WITH LATEST 3.4 WA DESIGN)</p> -->
         <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
       <!--    <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p> -->
       <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
