--- a/app/views/caseaccess/pages/booking-location-opt1.html
+++ b/app/views/caseaccess/pages/booking-location-opt1.html
@@ -18,7 +18,7 @@ Case details
     </label>
   </h1>
   <div id="event-name-hint" class="govuk-hint">
-    Enter the location name, for example, Taylor House Tribunal Centre.
+    Enter the location name, for example, Taylor House Tribunal Hearing Centre.
   </div>
   <div style="width:40%; padding:0 0 20px 0;display:inline-block;">
     <select id="location-picker" name="locationPicker">
