--- a/app/views/caseaccess/pages/booking-location-opt1b.html
+++ b/app/views/caseaccess/pages/booking-location-opt1b.html
@@ -23,7 +23,7 @@ id: "access-start-date",
 namePrefix: "access-start-date",
 fieldset: {
 legend: {
-text: "Access starts",
+text: "Booking start",
 classes: "govuk-fieldset__legend--m"
 }
 },
@@ -36,7 +36,7 @@ id: "access-end-date",
 namePrefix: "access-end-date",
 fieldset: {
 legend: {
-text: "Access ends",
+text: "Booking ends",
 classes: "govuk-fieldset__legend--m"
 }
 },
@@ -56,7 +56,6 @@ text: "For example, 19 12 2021"
     text: "Mobile phone number"
   }
 }) }}
-
 
 {% endset -%}
 {{ govukRadios({
