--- a/app/views/caseaccess/pages/booking-opt2.html
+++ b/app/views/caseaccess/pages/booking-opt2.html
@@ -28,8 +28,7 @@ Case details
             Plymouth Crown Court
           </label>
           <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-            Booking start {{ now |  date("add", 5, "day") | date( "D MMMM YYYY" ) }}<br>
-            Booking ends {{ now |  date("add", 10, "day") | date( "D MMMM YYYY" ) }}
+            Booking start {{ now |  date("add", 5, "day") | date( "D MMMM YYYY" ) }} - ends {{ now |  date("add", 10, "day") | date( "D MMMM YYYY" ) }}
           </div>
         </div>
         <div class="govuk-radios__item">
@@ -38,8 +37,7 @@ Case details
             Salisbury County Court
           </label>
           <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-            Booking start {{ now |  date("add", 8, "day") | date( "D MMMM YYYY" ) }}<br>
-            Booking ends {{ now |  date("add", 13, "day") | date( "D MMMM YYYY" ) }}
+            Booking start {{ now |  date("add", 8, "day") | date( "D MMMM YYYY" ) }} - ends {{ now |  date("add", 13, "day") | date( "D MMMM YYYY" ) }}
           </div>
         </div>
       </div>
