--- a/app/views/caseaccess/pages/booking-location-opt1c.html
+++ b/app/views/caseaccess/pages/booking-location-opt1c.html
@@ -35,7 +35,7 @@ Case details
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Your time at the location
+      Duration
     </dt>
     <dd class="govuk-summary-list__value">
       <p class="govuk-body">
